12 Jul 2003 Restructure service and facility features - Jan Jaeger
11 Jul 2003 Fix bogus HHCCT048E error message - Fish
11 Jul 2003 Fix "console: select: Bad file number" -- 2nd try - Fish
10 Jul 2003 fix tape label issue in hetinit.c & slib.c - Fish
10 Jul 2003 HFP Multiply-Add/Subtract Facility - Roger Bowler
09 Jul 2003 added check to configure.ac to ensure dynamic load support
            available if external-gui support requested on win32 - Fish
07 Jul 2003 configure.ac now correctly sets USE_DLLTOOL to false if
            OPTION_DYNAMIC_LOAD not possible (so dyninst/dyngui don't
            get built), and OPTION_DYNAMIC_LOAD and HDL_USE_LIBTOOL
            are now both handled automatically in configure.ac - Fish
07 Jul 2003 ECPS:VM config Statement and EVM panel command retired.
            both replaced with ECPSVM - Ivan Warren
07 Jul 2003 #undef OPTION_DYNAMIC_LOAD in featall.h if neither dlopen
            nor libtool is available - Fish
06 Jul 2003 LXR,LZER,LZDR,LZXR instructions - Roger Bowler
04 Jul 2003 Allow NUMCPU=0 - Jan Jaeger
03 Jul 2003 Long Displacement Facility - Roger Bowler
30 Jun 2003 Display all messages on shutdown - Jan Jaeger
30 Jun 2003 Removed incorrect locks in console attach/detach - Jan Jaeger
29 Jun 2003 Added shutdown logic - Jan Jaeger
28 Jun 2003 Fix "console: select: Bad file number" - Fish
28 Jun 2003 Updated hercinst.html with panel command info - Fish
28 Jun 2003 Loadable crypto support (US export regulations) - Jan Jaeger
27 Jun 2003 Allow unload reject in hdl final processing - Jan Jaeger
27 Jun 2003 Support dynamic loadable cgi routines - Jan Jaeger
27 Jun 2003 Panel.c + hsccmd.c: clear/reset screen before exiting - Fish
27 Jun 2003 Panel.c: 1) removed all external-gui logic, 2) long
            messages now wrap to the next screen line - Fish
27 Jun 2003 Fixed some "integer constant is too large for "long" type"
            warnings - Fish
27 Jun 2003 Added addt'l instructions/info to autogen.sh - Fish